Added Broke-N-Hungry project

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -122,6 +122,11 @@
                     <a href="https://NicoleShelton.github.io/memorygame"><img src="img/memory.png" height="150" width="150"></a>
                     <p>Fun memory game. (Created with Onna Owens!)</p>
                 </div>
+                <div class="col-md-3">
+                    <h4> Broke-N-Hungry:</h4>
+                    <a href="https://NicoleShelton.github.io/broke-n-hungry"><img src="img/BNH.png" height="150" width="150"></a>
+                    <p>When you're broke but you're hungry! (Created with Addey Welch and Ricky Keisling)</p>
+                </div>
                 </section>
     <hr>
 
