added twitter project and switched order of projects.

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -92,41 +92,54 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                   <div class="col-md-3">
-                    <h4>Reasons to join BaseCamp page</h4>
-                    <a href="https://NicoleShelton.github.io"><img src="img/reasonstojoinbc.png" height="150" width="150"></a>
-                    <p>This is my information page on why you should join Base Camp.</p>
-                  </div>
-                  <div class="col-md-3">
-                    <h4>Obsess Vintage webpage:</h4>
-                    <a href="https://NicoleShelton.github.io/web_dev"><img src="img/obsessvintage.png" height="150" width="150"></a>
-                    <p>For vintage lovers, this is a vintage funiture online store!</p>
-                  </div>
-                  <div class="col-md-3">
-                    <h4>RAddeyCole Music:</h4>
-                    <a href="https://NicoleShelton.github.io/RAddeyCole"><img src="img/raddeycolemusic.png" height="150" width="150"></a>
-                    <p>Colorful music boxes with a different genre of music.(Created with Addey Welch and Ricky Keisling)</p>
-                  </div>
-                <div class="col-md-3">
-                  <h4>GameShop web store front:</h4>
-                  <a href="https://NicoleShelton.github.io/shop"><img src="img/shop.png" height="150" width="150"></a>
-                  <p>My game store website with a variety of games to choose from.
-                  (Created with Eddrick Butler and Jacob Spence!)</p>
+                    <h4> Twitter Posts:</h4>
+                    <h5>Completed: Dec 15, 2016</h5>
+                    <a href="https://twitterprogram.herokuapp.com/"><img src="img/twitter.png" height="150" width="150"></a>
+                    <p>Finds posts and hashtags based on the data you input. (Used Twitter API)</p>
                 </div>
-                <div class="col-md-3">
-                    <h4> Connect-Four:</h4>
-                    <a href="https://NicoleShelton.github.io/connect-four"><img src="img/connect_four.png" height="150" width="150"></a>
-                    <p>Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</p>
+                 <div class="col-md-3">
+                    <h4> Broke-N-Hungry:</h4>
+                    <h5>Completed: Dec 2, 2016</h5>
+                    <a href="https://NicoleShelton.github.io/broke-n-hungry"><img src="img/BNH.png" height="150" width="150"></a>
+                    <p>When you're broke but you're hungry! (Created with Addey Welch and Ricky Keisling)</p>
                 </div>
                 <div class="col-md-3">
                     <h4> Memory:</h4>
+                    <h5>Completed: Oct 19, 2016</h5>
                     <a href="https://NicoleShelton.github.io/memorygame"><img src="img/memory.png" height="150" width="150"></a>
                     <p>Fun memory game. (Created with Onna Owens!)</p>
                 </div>
                 <div class="col-md-3">
-                    <h4> Broke-N-Hungry:</h4>
-                    <a href="https://NicoleShelton.github.io/broke-n-hungry"><img src="img/BNH.png" height="150" width="150"></a>
-                    <p>When you're broke but you're hungry! (Created with Addey Welch and Ricky Keisling)</p>
+                    <h4> Connect-Four:</h4>
+                    <h5>Completed: Oct 7, 2016</h5>
+                    <a href="https://NicoleShelton.github.io/connect-four"><img src="img/connect_four.png" height="150" width="150"></a>
+                    <p>Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</p>
                 </div>
+                <div class="col-md-3">
+                  <h4>GameShop web store front:</h4>
+                  <h5>Completed: Sep 13, 2016</h5>
+                  <a href="https://NicoleShelton.github.io/shop"><img src="img/shop.png" height="150" width="150"></a>
+                  <p>My game store website with a variety of games to choose from.
+                  (Created with Eddrick Butler and Jacob Spence!)</p>
+                </div>
+                 <div class="col-md-3">
+                    <h4>RAddeyCole Music:</h4>
+                    <h5>Completed: Sep 8, 2016</h5>
+                    <a href="https://NicoleShelton.github.io/RAddeyCole"><img src="img/raddeycolemusic.png" height="150" width="150"></a>
+                    <p>Colorful music boxes with a different genre of music.(Created with Addey Welch and Ricky Keisling)</p>
+                  </div>
+               <div class="col-md-3">
+                    <h4>Obsess Vintage webpage:</h4>
+                    <h5>Completed: Sep 27, 2016</h5>
+                    <a href="https://NicoleShelton.github.io/web_dev"><img src="img/obsessvintage.png" height="150" width="150"></a>
+                    <p>For vintage lovers, this is a vintage funiture online store!</p>
+                  </div>
+                  <div class="col-md-3">
+                    <h4>Reasons to join BaseCamp page</h4>
+                    <h5>Completed: Aug 24, 2016</h5>
+                    <a href="https://NicoleShelton.github.io"><img src="img/reasonstojoinbc.png" height="150" width="150"></a>
+                    <p>This is my information page on why you should join Base Camp.</p>
+                  </div>
                 </section>
     <hr>
 
