added resume link

--- a/my_portfolio/about.html
+++ b/my_portfolio/about.html
@@ -79,6 +79,8 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
                         <h1 style="text-align: center">About Me</h1>
+                        <hr class="small">
+                        <span class="subheading">Link to download my Resume <a href="https://www.dropbox.com/s/bgb5pisf74ux51y/Resume.pdf?dl=1">Here.</span></a>
                     </div>
                 </div>
             </div>
