--- a/my_portfolio/about.html
+++ b/my_portfolio/about.html
@@ -80,7 +80,7 @@
                     <div class="page-heading">
                         <h1 style="text-align: center">About Me</h1>
                         <hr class="small">
-                        <span class="subheading">Link to download my Resume <a href="https://www.dropbox.com/s/bgb5pisf74ux51y/Resume.pdf?dl=1">Here.</span></a>
+                        <span class="subheading" style="color:black">Link to download my Resume <a href="https://www.dropbox.com/s/bgb5pisf74ux51y/Resume.pdf?dl=1">Here.</span></a>
                     </div>
                 </div>
             </div>
