added rental agency project

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -20,7 +20,8 @@
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+        rel='stylesheet' type='text/css'>
     <link href="img/projects.png" rel="shortcut icon" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +44,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                <i class="fa fa-thumbs-up "></i> <span class="light">Nicole Shelton</a>
+                    <i class="fa fa-thumbs-up "></i> <span class="light">Nicole Shelton</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,7 +77,7 @@
     <header class="intro-header" style="background-image: url('img/image3.jpg')">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="page-heading">
                         <h1>Projects</h1>
                         <p>Click images to view page.</p>
@@ -91,6 +92,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="col-md-3">
+                    <h4> Rent the Dress:</h4>
+                    <h5>Completed: March 1, 2017</h5>
+                    <a href="https://nicoleshelton.github.io/rental-front-end"><img src="img/rentthedress.png" height="150" width="150"></a>
+                    <p>Lets you select the dress(s) and displays the total at the top of the page.</p>
+                  </div>
                   <div class="col-md-3">
                     <h4> Twitter Posts:</h4>
                     <h5>Completed: Dec 15, 2016</h5>
@@ -109,6 +116,10 @@
                     <a href="https://NicoleShelton.github.io/memorygame"><img src="img/memory.png" height="150" width="150"></a>
                     <p>Fun memory game. (Created with Onna Owens!)</p>
                 </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="col-md-3">
                     <h4> Connect-Four:</h4>
                     <h5>Completed: Oct 7, 2016</h5>
@@ -127,19 +138,13 @@
                     <h5>Completed: Sep 8, 2016</h5>
                     <a href="https://NicoleShelton.github.io/RAddeyCole"><img src="img/raddeycolemusic.png" height="150" width="150"></a>
                     <p>Colorful music boxes with a different genre of music.(Created with Addey Welch and Ricky Keisling)</p>
-                  </div>
+                  </div> 
                <div class="col-md-3">
                     <h4>Obsess Vintage webpage:</h4>
                     <h5>Completed: Sep 27, 2016</h5>
                     <a href="https://NicoleShelton.github.io/web_dev"><img src="img/obsessvintage.png" height="150" width="150"></a>
                     <p>For vintage lovers, this is a vintage funiture online store!</p>
-                  </div>
-                  <div class="col-md-3">
-                    <h4>Reasons to join BaseCamp page</h4>
-                    <h5>Completed: Aug 24, 2016</h5>
-                    <a href="https://NicoleShelton.github.io"><img src="img/reasonstojoinbc.png" height="150" width="150"></a>
-                    <p>This is my information page on why you should join Base Camp.</p>
-                  </div>
+                  </div> 
                 </section>
 
     <!-- Footer -->
@@ -154,35 +159,35 @@
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                               </span>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="https://www.linkedin.com/nhome/">
-                              <span class="fa-stack fa-lg">
+                </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/nhome/">
+                        <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                               </span>
-                          </a>
-                      </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
-                </div>
+                    </a>
+                </li>
+                </ul>
+                <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
             </div>
         </div>
-    </footer>
+        </div>
+        </footer>
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+        <!-- jQuery -->
+        <script src="vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+        <!-- Contact Form JavaScript -->
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="js/contact_me.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+        <!-- Theme JavaScript -->
+        <script src="js/clean-blog.min.js"></script>
 
 </body>
 
