--- a/skills.html
+++ b/skills.html
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <h3 style="text-align: center">Languages and Skills:</h3>
-                <p style="text-align: center">Python <br /> HTML and CSS <br /> Bootstrap <br /> JavaScript <br /> JQuery</p>
+                <p style="text-align: center">Python <br /> HTML and CSS <br /> Bootstrap <br /> JavaScript <br /> JQuery <br /> Django</p>
             </div>
         </div>
     </div>
