changed back to webdev project

--- a/projects.html
+++ b/projects.html
@@ -94,9 +94,9 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="col-md-3">
                     <h4> Rent the Dress:</h4>
-                    <h5>Completed: April 3, 2017</h5>
+                    <h5>Completed: March 1, 2017</h5>
                     <a href="https://nicoleshelton.github.io/rental-front-end"><img src="img/rentthedress.png" height="150" width="150"></a>
-                    <p>Lets you rent/return the dress you want to rent or already rented and either removes it or returns it to the inventory.</p>
+                    <p>Lets you select the dress(s) and displays the total at the top of the page.</p>
                   </div>
                   <div class="col-md-3">
                     <h4> Twitter Posts:</h4>
