added link to github on projects page

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     <div class="page-heading">
                         <h1 style="text-align: center">About Me</h1>
                         <hr class="small">
-                        <span class="subheading" style="color:black">Link to download my Resume <a style="color:blue" href="https://www.dropbox.com/s/86hfw4dbv838urv/NicoleSheltonResume.pdf?dl=1">Here.</span></a>
+                        <span class="subheading" style="color:black">Link to download my Resume <a style="color:blue" href="https://www.dropbox.com/s/86hfw4dbv838urv/NicoleSheltonResume.pdf?dl=1">HERE.</span></a>
                     </div>
                 </div>
             </div>
