--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,7 @@
                     <div class="page-heading">
                         <h1>Projects</h1>
                         <p>Click images to view page.</p>
+                        <span class="subheading">Link to GitHub <a style="color:yellow" href="https://github.com/NicoleShelton">HERE.</span></a>
                     </div>
                 </div>
             </div>
