added django presentation to projects

--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,7 @@
                     <div class="page-heading">
                         <h1>Projects</h1>
                         <p>Click images to view page.</p>
+                        <span class="subheading" style="color:white">Link to my Final Django Presentation <a style="color:blue" href="Django_Presentation.pdf">HERE.</span></a>
                     </div>
                 </div>
             </div>
